--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "@syncfusion/ej2-vue-calendars": "^21.2.3",
+    "@vuepic/vue-datepicker": "^5.0.1",
     "core-js": "^3.8.3",
+    "v-calendar": "^3.0.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-class-component": "^8.0.0-rc.1",
+    "vue-router": "^4.0.3",
+    "vue3-datepicker": "^0.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
