--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@syncfusion/ej2-vue-calendars": "^21.2.3",
     "@vuepic/vue-datepicker": "^5.0.1",
     "core-js": "^3.8.3",
+    "json-server": "^0.17.3",
     "v-calendar": "^3.0.3",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-rc.1",
